Adds design page, updates information on pages.

--- a/flask_website/templates/base.html
+++ b/flask_website/templates/base.html
@@ -1,7 +1,7 @@
 <!--- 
     Alexander Holmes 
     CIS-226 Web programming - Flask
-    9/15/22 -->
+    10/5/22 -->
 
 <!doctype html>
 <html lang="en">
@@ -21,6 +21,7 @@
             <a href ="{{ url_for('home') }}"     class="navbar-brand">Home</a> 
             <a href ="{{ url_for('projects') }}" class="navbar-brand">Projects</a> 
             <a href ="{{ url_for('contacts') }}" class="navbar-brand">Contacts</a>
+            <a href ="{{ url_for('design') }}" class="navbar-brand">Design</a>
         </div>
     </nav>
 
