--- a/flask_website/templates/design.html
+++ b/flask_website/templates/design.html
@@ -5,5 +5,13 @@
     {% extends "base.html" %}
 
     {% block content %}
-
+    <div class="container-md float-left text-primary" style="margin:15px" >
+        <h3>How the website was designed</h3>
+        <h4>Design: The design of the website was to be sleek and straight forward. I decided to use bootstrap to make a more consistent website.</h4>
+        <h4>Develop: In order to create this website I researched on flask, bootstrap, and referenced the given materials.</h4>
+        <h4>Test: This website does not have tests, yet.</h4>
+        <h4>Document: The flask_web.py contains the flask website's routes and logic
+            the static folder, templates folder, and requirements.txt should be available.
+            A user can create a virtual enviornment if wanted to run locally.</h4>
+    </div>
     {% endblock content %}
