--- a/webdb/templates/base.html
+++ b/webdb/templates/base.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <div class="container ml-2 my-2">
     {% with messages = get_flashed_messages() %}
       {% if messages %}
         <ul>
@@ -17,30 +18,36 @@
         </ul>
       {% endif %}
     {% endwith %}
-    <h1>Add Vegetable</h1>
+    <h1>Add Order</h1>
     <form method="POST">
-      <label>Name: <input type="text" name="name" value="{{ name }}"></label>
+      <label>Name: <input type="text" name="name" value="{{ name }}"></label>&nbsp;
       <label>Quantity: <input type="number" name="quantity" value="{{ quantity }}"></label>
+      <label>Price per pound "0.00": <input type="number" step="0.01" name="price" value="{{ price }}"></label>
       <button type="submit">Add</button>
     </form>
     <hr>
-    <table>
+    <table class="table">
       <thead>
         <tr>
-          <th>Name</th>
-          <th style="text-align: right;">Quantity</th>
+          <th scope="col">Name</th>&nbsp;
+          <th scope="col">Quantity</th>&nbsp;
+          <th scope="col">Price Per Pound</th>&nbsp;
+          <th scope="col">Total Price</th>&nbsp;
         </tr>
       </thead>
       <tbody>
-        {% for quantity, name in vegetables %}
-          <tr>
-            <td>{{ name }}</td>
-            <td style="text-align: right;">{{ quantity }}</td>
+        {% for pk, quantity, name, price, total_price in vegetables %}
+          <tr scope="row">
+            <td>{{ name }}</td>&nbsp;
+            <td>{{ quantity }}</td>&nbsp;
+            <td>${{ price }}</td>
+            <td>${{ total_price }}</td>
           </tr>
         {% endfor %}
       </tbody>
     </table>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  </div>
   </body>
   
 </html>
